--- a/css/main.css
+++ b/css/main.css
@@ -69,9 +69,10 @@ header {
   width: 100%;
   height: 60px;
   padding: 0 5%;
-  display: flex;
+  display: grid;
   align-items: center;
-  justify-content: space-between;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr auto 1fr;
   position: sticky;
   top: 0;
   left: 0;
@@ -85,9 +86,13 @@ header .user-avatar, header .site-id {
   gap: 10px;
 }
 
+header .user-avatar {
+  justify-self: start;
+}
+
 header .user-avatar img {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   border: 2px solid var(--lshade);
   border-radius: 100%;
   opacity: 0;
@@ -97,6 +102,10 @@ header .user-avatar img {
 header .user-avatar.active img {
   opacity: 1;
   visibility: visible;
+}
+
+header .site-id {
+  justify-self: center;
 }
 
 header .site-id img {
@@ -109,38 +118,12 @@ header .site-id span {
   font-weight: 800;
 }
 
-#userName {
-  background: var(--lshade);
-  padding: 5px 30px 5px 15px;
-  display: none;
-  align-items: center;
-  justify-content: left;
-  gap: 3px;
-  font-size: var(--sm);
-  border-radius: 20px;
-  position: relative;
-}
-
-#userName.active {
-  display: flex;
-}
-
-#userName.active::after {
-  content: "";
-  background: var(--success);
-  width: 10px;
-  height: 10px;
-  border-radius: 100%;
-  position: absolute;
-  top: auto;
-  right: 10px;
-}
-
 header .nav-toggle {
   width: 1.8em;
   height: 2em;
   display: flex;
   align-items: center;
+  justify-self: right;
   justify-content: center;
   flex-direction: column;
   gap: 0.5em;
@@ -148,6 +131,7 @@ header .nav-toggle {
   -webkit-tap-highlight-color: transparent;
   position: relative;
   z-index: 9;
+  float: right;
 }
 
 header .nav-toggle span {
@@ -290,6 +274,33 @@ html:has(.authForm-wrapper.active) .nav-link {
 html:has(.resetPasswordForm-wrapper.active) .authForm-wrapper,
 html:has(.resetPasswordForm-wrapper.active) .nav-link {
   display: none;
+}
+
+#userName {
+  background: var(--lshade);
+  padding: 5px 30px 5px 15px;
+  display: none;
+  align-items: center;
+  justify-content: left;
+  gap: 3px;
+  font-size: var(--sm);
+  border-radius: 20px;
+  position: relative;
+}
+
+#userName.active {
+  display: flex;
+}
+
+#userName.active::after {
+  content: "";
+  background: var(--success);
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  position: absolute;
+  top: auto;
+  right: 10px;
 }
 
 .nav-link {
@@ -524,7 +535,7 @@ main {
 }
 
 .auth-content .cn-icon {
-  padding: 7px;
+  padding: 7px 7px 7px 5%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -629,6 +640,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   width: 100%;
   max-height: 300px;
   font-size: var(--sm);
+  line-height: 1.3;
   overflow-y: hidden;
   position: relative;
   user-select: none !important;
