--- a/css/main.css
+++ b/css/main.css
@@ -1195,9 +1195,9 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   
   .post-comments.active .commentForm-wrapper {
     position: sticky;
-    bottom: 0;
+    bottom: 100%;
     left: 0;
-    transform: translateY(100px);
+    transform: translateY(-100%);
     z-index: 8;
   }
   
