--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 /* Global font */
 
 @font-face {
-  font-family: "W sans";
-  src: url("../fonts/WorkSans-Regular.ttf");
+  font-family: "Qsans";
+  src: url("../fonts/Questrial-Regular.ttf");
 }
 
 /* Global styles */
