--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
   outline: 0;
   appearance: none;
   -webkit-appearance: none;
-  font-family: "W sans", sans-serif;
+  font-family: "Qsans", sans-serif;
 }
 
 ::-webkit-scrollbar {
