--- a/css/main.css
+++ b/css/main.css
@@ -648,9 +648,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 
 .post-body::after {
   content: "";
-  background:
-    linear-gradient(to bottom,
-      transparent, var(--light));
+  background: transparent;
   width: 100%;
   height: 50%;
   position: absolute;
@@ -665,6 +663,11 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 }
 
 .post-body.expand::after {
+  background: linear-gradient(to bottom,
+  transparent, var(--light));
+}
+
+.post-body.expandY::after {
   background: transparent;
 }
 
