--- a/css/main.css
+++ b/css/main.css
@@ -641,6 +641,9 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   max-height: 300px;
   font-size: var(--sm);
   line-height: 1;
+  display: grid;
+  grid-auto-rows: row;
+  gap: 2px;
   overflow-y: hidden;
   position: relative;
   user-select: none !important;
@@ -669,10 +672,6 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 
 .post-body.expandY::after {
   background: transparent;
-}
-
-.post-body div {
-  margin-bottom: -4px;
 }
 
 .post-img {
