--- a/css/main.css
+++ b/css/main.css
@@ -693,7 +693,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 }
 
 .post-analytics .pa span:nth-child(1) {
-  font-size: var(--md);
+  font-size: var(--sm);
   opacity: .8;
 }
 
