--- a/css/main.css
+++ b/css/main.css
@@ -698,7 +698,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 }
 
 .post-analytics .pa span:nth-child(2) {
-  font-size: var(--md);
+  font-size: var(--sm);
   opacity: .6;
 }
 
