--- a/css/main.css
+++ b/css/main.css
@@ -639,6 +639,9 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 .post-body {
   width: 100%;
   max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   font-size: var(--sm);
   line-height: 1;
   overflow-y: hidden;
